--- a/views/enrolled-students.ejs
+++ b/views/enrolled-students.ejs
@@ -29,7 +29,7 @@
               <%=ss.score%>
             <%}%>
               </td>
-            <td></td>
+            <td><%=ss.letter%></td>
         </tr>
         <% }) %>
       </table>
