--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -2,13 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <%- include layout/title %>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/teachers">Teachers</a>
-    <a href="/subjects">Subjects</a>
-    <a href="/students">Students</a>
+    <%- include layout/nav-bar %>
     <h1>Daftar Subjects</h1>
     <br><br>
     <table border="1">
