--- a/views/add-subject-to-student.ejs
+++ b/views/add-subject-to-student.ejs
@@ -5,10 +5,7 @@
     <title></title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/teachers">Teachers</a>
-    <a href="/subjects">Subjects</a>
-    <a href="/students">Students</a>
+    <%- include layout/nav-bar %>
     <h1>Add Subject to Student</h1>
 
     <div class="title">
