--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <%- include layout/title %>
   </head>
   <body>
+    <%- include layout/nav-bar %>
     <h1>Welcome, please choose menu:</h1>
     <br><br>
-    <a href="/teachers">Teachers</a>
-    <a href="/subjects">Subjects</a>
-    <a href="/students">Students</a>
+
   </body>
 </html>
