--- a/views/givescore.ejs
+++ b/views/givescore.ejs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Give Score</title>
-    <link type="text/css" rel="stylesheet" href="/style.css">
+    <%- include layout/link %>
+    <%- include layout/title %>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <button type="submit" name="">Add score</button>
       <br><br>
     </form>
-    <a href="/">home</a>
+    <%- include layout/script %>
 
   </body>
 </html>
