--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <%- include layout/link %>
     <%- include layout/title %>
   </head>
   <body>
-    <%- include layout/nav-bar %>
+    <%- include layout/side-nav %>
     <h1>Welcome, please choose menu:</h1>
     <br><br>
 
+    <%- include layout/script %>
   </body>
 </html>
