--- a/views/add-student.ejs
+++ b/views/add-student.ejs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <%- include layout/link %>
+    <%- include layout/title %>
   </head>
   <body>
     <%- include layout/nav-bar %>
@@ -17,6 +18,6 @@
         <input type="submit" value="Add">
       </fieldset>
     </form>
-
+    <%- include layout/script %>
   </body>
 </html>
