--- a/views/edit-teacher.ejs
+++ b/views/edit-teacher.ejs
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <%- include layout/link %>
+    <%- include layout/title %>
   </head>
   <body>
     <%- include layout/nav-bar %>
@@ -26,6 +27,6 @@
         <input type="submit" value="Update">
       </fieldset>
     </form>
-
+    <%- include layout/script %>
   </body>
 </html>
