--- a/views/enrolled-students.ejs
+++ b/views/enrolled-students.ejs
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <%- include layout/link %>
+    <%- include layout/title %>
   </head>
   <body>
+    <%- include layout/nav-bar %>
     <h1><%= conj[0].Subject.subject_name %></h1>
 
 
     <a href="/subjects">return to Subjects List</a>
 
     <div class="title">
-      <table border="1">
+      <table>
         <tr>
           <th>No</th>
           <th>Name</th>
@@ -34,10 +36,7 @@
         <% }) %>
       </table>
 
-      <br>
-      <br>
-      <a href="/">home</a>
     </div>
-
+    <%- include layout/script %>
   </body>
 </html>
