--- a/views/layout/nav-bar.ejs
+++ b/views/layout/nav-bar.ejs
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-wrapper blue">
     <a href="/" class="brand-logo">Home</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
+    <ul id="nav-mobile" class="right">
       <li><a href="/teachers">Teachers</a></li>
       <li><a href="/subjects">Subjects</a></li>
       <li><a href="/students">Students</a></li>
