--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -2,34 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <%- include layout/link %>
     <%- include layout/title %>
   </head>
   <body>
     <%- include layout/nav-bar %>
-    <h1>Daftar Subjects</h1>
-    <br><br>
-    <table border="1">
-      <tbody>
-        <th>No</th>
-        <th>Subject Name</th>
-        <th>Teacher</th>
-        <th>Actions</th>
-        <%var i=1; data.forEach(d=> {%>
-        <tr>
-          <td><%=i++%></td>
-          <td><%=d.subject_name%></td>
-          <td><%var j = 1; d.Teachers.forEach(t => { %>
-                <%=j++ %>. <%= t.first_name %> <%=t.last_name %><br>
-                <% }) %></td>
-          <td><a href="subjects/<%=d.id%>/enrolledstudents">Enrolled Students</a></td>
-        </tr>
-        <%})%>
-      </tbody>
-    </table>
-    <br><br>
-    <form class="" action="/subjects" method="post">
-      <input type="text" name="subject_name" placeholder="nama subject">
-      <input type="submit" value="Add">
-    </form>
+    <div class="center-align">
+      <h4>Daftar Subjects</h4>
+    </div>
+    <div class="container">
+      <br><br>
+      <table border="1">
+        <tbody>
+          <th>No</th>
+          <th>Subject Name</th>
+          <th>Teacher</th>
+          <th>Actions</th>
+          <%var i=1; data.forEach(d=> {%>
+          <tr>
+            <td><%=i++%></td>
+            <td><%=d.subject_name%></td>
+            <td><%var j = 1; d.Teachers.forEach(t => { %>
+                  <%=j++ %>. <%= t.first_name %> <%=t.last_name %><br>
+                  <% }) %></td>
+            <td><a href="subjects/<%=d.id%>/enrolledstudents">Enrolled Students</a></td>
+          </tr>
+          <%})%>
+        </tbody>
+      </table>
+      <br><br>
+      <form class="" action="/subjects" method="post">
+        <input type="text" name="subject_name" placeholder="nama subject">
+        <input type="submit" value="Add">
+      </form>
+    </div>
+    <%- include layout/script %>
   </body>
 </html>
