ready to deploy

--- a/views/add-subject-to-student.ejs
+++ b/views/add-subject-to-student.ejs
@@ -7,25 +7,37 @@
   </head>
   <body>
     <%- include layout/nav-bar %>
-    <h1>Add Subject to Student</h1>
+    <div class="center-align">
+      <h4>Add Subject to Student</h4>
+    </div>
 
     <div class="container">
       <form action="/students/<%=data1.id%>/addsubject" method="post">
-       First Name: <%= data1.first_name %><br>
-       Last Name: <%= data1.last_name %><br>
-       Email: <%= data1.email %><br>
-       <br>
-       Choose Subject:
-        <select name= "SubjectId" >
-          <% data2.forEach(s => { %>
-          <option value="<%= s.id %>"><%= s.subject_name %></option>
-        <% }) %>
-        </select><br><br>
+        <table>
+          <tr>
+            <th>First Name:</th>
+            <td><%= data1.first_name %></td>
+          </tr>
+          <tr>
+            <th>Last Name:</th>
+            <td><%= data1.last_name %></td>
+          </tr>
+          <tr>
+            <th>Email: </th>
+            <td><%= data1.email %></td>
+          </tr>
+          <tr>
+            <th>Choose Subject:</th>
+            <td><select name= "SubjectId" >
+              <% data2.forEach(s => { %>
+              <option value="<%= s.id %>"><%= s.subject_name %></option>
+            <% }) %>
+            </select></td>
+          </tr>
+        </table>
       <input type="submit" value="Add">
     </form>
-      <br>
-      <br>
-      <a href="/">home</a>
+
     </div>
     <%- include layout/script %>
   </body>
