--- a/views/givescore.ejs
+++ b/views/givescore.ejs
@@ -8,16 +8,20 @@
 
   <body>
     <%- include layout/nav-bar %>
-    <h1>Input Score</h1>
-    <form action="/subjects/<%=conj[0].id%>/givescore" method="post">
-      Student Name: <%=conj[0].Student.first_name%> <%=conj[0].Student.last_name%> <br>
-      Subject Name: <%=conj[0].Subject.subject_name %> <br>
+    <div class="center-align">
+      <h4>Input Score</h4>
+    </div>
+    <div class="container">
 
-      Score : <input type="text" name="score"><br>
+        Student Name: <%=conj[0].Student.first_name%> <%=conj[0].Student.last_name%> <br>
+        Subject Name: <%=conj[0].Subject.subject_name %> <br>
+      <form action="/subjects/<%=conj[0].id%>/givescore" method="post">
+        Score : <input type="text" name="score"><br>
 
-      <button type="submit" name="">Add score</button>
-      <br><br>
-    </form>
+        <button type="submit" name="">Add score</button>
+        <br><br>
+      </form>
+    </div>
     <%- include layout/script %>
 
   </body>
