--- a/views/layout/side-nav.ejs
+++ b/views/layout/side-nav.ejs
@@ -2,16 +2,43 @@
     <nav>
       <div class="nav-wrapper">
         <a href="/" class="brand-logo">Home</a>
-        <a href="#" data-activates="mobile-demo"class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="/teachers">Teachers</a></li>
-          <li><a href="/subjects">Subjects</a></li>
-          <li><a href="/students">Students</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="/teachers">Teachers</a></li>
-          <li><a href="/subjects">Subjects</a></li>
-          <li><a href="/students">Students</a></li>
-        </ul>
+        <% if(session.role == 'headmaster') { %>
+          <a href="#" data-activates="mobile-demo"class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="/teachers">Teachers</a></li>
+            <li><a href="/subjects">Subjects</a></li>
+            <li><a href="/students">Students</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="/teachers">Teachers</a></li>
+            <li><a href="/subjects">Subjects</a></li>
+            <li><a href="/students">Students</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+        <% } else if(session.role == 'academic') {%>
+          <a href="#" data-activates="mobile-demo"class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="/subjects">Subjects</a></li>
+            <li><a href="/students">Students</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="/subjects">Subjects</a></li>
+            <li><a href="/students">Students</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+        <% } else if(session.role == 'teacher') {%>
+          <a href="#" data-activates="mobile-demo"class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="/students">Students</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="/students">Students</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+        <% }%>
+
       </div>
     </nav>
